--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,13 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-26
     - sys-img-armeabi-v7a-android-17
+
+    branches:
+      only:
+      - master
+
+    install:
+      - chmod +x ./gradlew
+
+    script: ./gradlew clean assembleDebug
+
